crates/strider-analyze/tests/snapshots/v3__arm__stack__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x56c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x610:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x6a8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v21" [color="#888888", style=dashed];
  "v21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "24" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x584:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "24" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v28" [color="#888888", style=dashed];
  "v28" -> "24" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v29" [color="#888888", style=dashed];
  "v29" -> "24" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "30" -> "24" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "30" -> "24" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "31" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "24" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x624:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "31" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v35" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "38" [label="IndirectBranch", shape=doublecircle, fillcolor="#103a10"];
  "31" -> "38" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "40" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "43" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "47" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v50" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v50" [color="#888888", style=dashed];
  "v50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "47" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "31" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "43" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v36" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "54" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "55" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "54" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v29" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "58" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "58" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "17" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "59" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "58" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "62" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "9" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "62" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "64" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "62" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "67" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "68" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v14" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "73" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "73" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "74" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "76" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "74" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "77" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "77" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "80" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
