crates/strider-analyze/tests/snapshots/v3__arm__stack__recursive_stack_growth.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x624:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x6:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "23" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "34" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "38" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "42" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "46" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "46" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "52" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "52" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v53" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v53" -> "52" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "54" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v55" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "54" -> "v55" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "54" -> "v53" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "52" -> "54" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "57" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v55" -> "57" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "57" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "9" -> "57" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "59" -> "57" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "60" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "59" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="φ r4", shape=house, fillcolor="#163030"];
  "52" -> "62" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "62" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="φ r3", shape=house, fillcolor="#163030"];
  "52" -> "65" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "67" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "64" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "67" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1ffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="φ r0", shape=house, fillcolor="#163030"];
  "52" -> "61" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "69" -> "61" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" -> "61" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "65" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
